--- a/frontend.html
+++ b/frontend.html
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://powerdms1.applytojob.com/apply/0QQ7bdulz0/Senior-Software-Engineer-Back-Andor-FrontEnd-Local-Or-Remote'>Senior Software Engineer - Back and/or Front-End (Local or Remote) - PowerDMS - Career Page</a></h5> 
+<h5><a href='http://powerdms1.applytojob.com/apply/0QQ7bdulz0/Senior-Software-Engineer-Back-Andor-FrontEnd-Local-Or-Remote'>Senior Software Engineer - Back and/or Front-End (Local or Remote) - PowerDMS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4370690002'>Job Application for Frontend Engineer - Discovery at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4370690002'>Job Application for Frontend Engineer - Discovery at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of Lead Frontend Engineer at Futrli.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/iflix/job/oDVDafw5'>iflix Careers - Senior Frontend Engineer - React</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/iflix/job/oDVDafw5'>iflix Careers - Senior Frontend Engineer - React</a></h5> 
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -132,7 +132,7 @@
 <p><span class="badge badge-light">Chennai</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1765502'>Job Application for Senior Front-End Engineer at Endurance International Group - India</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1765502'>Job Application for Senior Front-End Engineer at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -140,11 +140,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://shedul.workable.com/j/3E9F02680A'>Shedul - Jobs: JavaScript Front-End Architect - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shedul.workable.com/j/3E9F02680A'>Shedul - Jobs: JavaScript Front-End Architect - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://bizongo.recruiterbox.com/jobs/fk0jsuj/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bizongo.recruiterbox.com/jobs/fk0jsuj/'>
     Senior Software Engineer - Frontend at Bizongo
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -177,7 +177,7 @@ generation web and mobile components and interfaces. Develop new ways of?...</p>
 <p>Jul 12, 2019 ... GOWAGO AG has a job opening for Senior Front-End Developer in Z?rich (
 published: 19.06.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/rhwhotels/job/oeMDafwx'>RHW Hotel Management Careers - Front Desk Attendant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/rhwhotels/job/oeMDafwx'>RHW Hotel Management Careers - Front Desk Attendant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -237,7 +237,7 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1789014'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1789014'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -253,7 +253,7 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/behalf/8ec61523-1686-4e39-831a-8006e63bb17f'>Behalf - Senior Frontend Engineer - Core</a></h5> 
+<h5><a href='https://jobs.lever.co/behalf/8ec61523-1686-4e39-831a-8006e63bb17f'>Behalf - Senior Frontend Engineer - Core</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... ... you'll use the latest frontend technologies to create the best development 
 experience for our developers, you'll help to build awesome UX, you'll architect 
@@ -291,7 +291,7 @@ the?...</p>
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692241690-it-developer-front-end-'>Ubisoft IT Developer ( Front-end) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692241690-it-developer-front-end-'>Ubisoft IT Developer ( Front-end) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -303,7 +303,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4368814002'>Job Application for Senior Frontend Engineer - Content and Partners team at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4368814002'>Job Application for Senior Frontend Engineer - Content and Partners team at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -377,7 +377,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692222393-frontend-developer'>DataProphet Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692222393-frontend-developer'>DataProphet Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -411,7 +411,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://graze.applytojob.com/apply/PxxT18r06g/Front-End-Developer'>Front End Developer - graze.com - Career Page</a></h5> 
+<h5><a href='http://graze.applytojob.com/apply/PxxT18r06g/Front-End-Developer'>Front End Developer - graze.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -424,7 +424,7 @@ the?...</p>
 <p>5 days ago ... As a Senior Front End Engineer at Rent the Runway, you are someone who 
 prioritizes creativity and user experience alongside great code and curiosity.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://swapfiets.recruitee.com/l/da/o/senior-frontend-developer-angular'>
+<h5><a href='https://swapfiets.recruitee.com/l/da/o/senior-frontend-developer-angular'>
       Senior Frontend Developer (Angular) - Swapfiets
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
